--- a/identity/index.html
+++ b/identity/index.html
@@ -638,13 +638,13 @@ As part of the e-Navigation process the Danish Maritime Authority had been worki
 <div class="sect2">
 <h3 id="signing-up"><a class="anchor" href="#signing-up"></a>1.3. Signing up</h3>
 <div class="paragraph">
-<p>In order to get an organization, its users and any ships the organization might own on to the Maritime Cloud, the organization needs to perform a signup process. The process is currently manual. To start the process, please fill out the <a href="https://portal.maritimecloud.net/app/index.html#/join">registration form</a>.</p>
+<p>In order to get an organization, its users and any ships the organization might own on to the Maritime Cloud, the organization needs to perform a signup process. The process is currently manual. To start the process, please fill out the <a href="https://management.maritimecloud.net/#/apply">registration form</a>.</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="feedback"><a class="anchor" href="#feedback"></a>1.4. Feedback</h3>
 <div class="paragraph">
-<p>Readers may send feedback about errors, omissions, and ambiguities in this guide to <a href="mailto:tgc@dma.dk">tgc@dma.dk</a> or even better submit a pull request to the documentation available at <a href="https://github.com/MaritimeCloud/Documentation/tree/master/developer-guide/adoc" class="bare">https://github.com/MaritimeCloud/Documentation/tree/master/developer-guide/adoc</a>.</p>
+<p>Readers may send feedback about errors, omissions, and ambiguities in this guide to <a href="mailto:tgc@dma.dk">tgc@dma.dk</a> or even better submit a pull request to the documentation available at <a href="https://github.com/MaritimeCloud/developers.maritimecloud.net" class="bare">https://github.com/MaritimeCloud/developers.maritimecloud.net</a>.</p>
 </div>
 <div class="paragraph">
 <p>As previously mentioned questions about usage of the Maritime Cloud should be directed to our Google Group at <a href="https://groups.google.com/forum/#!forum/maritimecloud" class="bare">https://groups.google.com/forum/#!forum/maritimecloud</a></p>
@@ -958,7 +958,7 @@ attributes, and credentials.</p>
 <div class="sect3">
 <h4 id="setting-up-an-openid-connect-identity-provider"><a class="anchor" href="#setting-up-an-openid-connect-identity-provider"></a>4.5.1. Setting up an OpenID Connect Identity Provider</h4>
 <div class="paragraph">
-<p>OpenID Connect is supported by the latest ADFS and <a href="http://keycloak.org">Keycloak</a> releases.</p>
+<p>OpenID Connect is supported by the latest ADFS and <a href="http://keycloak.org">Keycloak</a> releases. The Maritime Cloud Identity Broker only supports the <a href="http://openid.net/specs/openid-connect-core-1_0.html#CodeFlowAuth">OpenID Connect Authorization Code Flow</a> when connecting to Identity Providers. This limitation only applies when the Identity Broker connects to Identity Providers, not when Services/Clients connects to the Identity Broker.</p>
 </div>
 <div class="paragraph">
 <p>As default the Maritime Cloud Identity Broker expect the following attributes to be provided by an OpenID Connect Identity Provider:</p>
@@ -1539,23 +1539,163 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 <p>As an example of how authorization can be done, let us have a look at how it is handled inside the Maritime Cloud Identity Registry. When it comes to authorization, the Identity Registry will have the same information about its users as any other service in the Maritime Cloud.</p>
 </div>
 <div class="paragraph">
-<p>The Identity Registry currently has three roles:</p>
+<p>The Identity Registry currently has these roles:</p>
+</div>
+<table class="tableblock frame-all grid-all spread">
+<caption class="title">Identity Registry Roles</caption>
+<colgroup>
+<col style="width: 11.1111%;">
+<col style="width: 11.1111%;">
+<col style="width: 11.1111%;">
+<col style="width: 11.1111%;">
+<col style="width: 11.1111%;">
+<col style="width: 11.1111%;">
+<col style="width: 11.1111%;">
+<col style="width: 11.1111%;">
+<col style="width: 11.1112%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Role</th>
+<th class="tableblock halign-center valign-top">Approve New Org</th>
+<th class="tableblock halign-center valign-top">Edit Own Org</th>
+<th class="tableblock halign-center valign-top">Maintain Org Users</th>
+<th class="tableblock halign-center valign-top">Maintain Org Vessels</th>
+<th class="tableblock halign-center valign-top">Maintain Org Services</th>
+<th class="tableblock halign-center valign-top">Maintain Org Devices</th>
+<th class="tableblock halign-center valign-top">Maintain Org Roles</th>
+<th class="tableblock halign-center valign-top">Delete Org</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">ROLE_SITE_ADMIN</p></th>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+</tr>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">ROLE_ORG_ADMIN</p></th>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">ROLE_ENTITY_ADMIN</p></th>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">ROLE_USER_ADMIN</p></th>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">ROLE_VESSEL_ADMIN</p></th>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">ROLE_SERVICE_ADMIN</p></th>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">ROLE_DEVICE_ADMIN</p></th>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">ROLE_APPROVE_ORG</p></th>
+<td class="tableblock halign-center valign-top"><p class="tableblock">X</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<th class="tableblock halign-left valign-top"><p class="tableblock">ROLE_USER</p></th>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+</tbody>
+</table>
+<div class="paragraph">
+<p>A few things should be noted:</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p><strong>ROLE_USER</strong> - Grants read access to information about the organization the user belongs to (will be assigned by default to authenticated users).</p>
+<p>"Maintain" (as mentioned in the table above) means to be able to create, update and delete, as well as issuing and revoking certificates.</p>
 </li>
 <li>
-<p><strong>ROLE_ORG_ADMIN</strong> - Grants read and write access to information about the organization the user belongs to.</p>
+<p>Excluding entities with the role ROLE_SITE_ADMIN, it is not possible for entities to see entities from other organizations.</p>
 </li>
 <li>
-<p><strong>ROLE_SITE_ADMIN</strong> - Grants access to administrative functions in the Identity Registry.</p>
+<p>A ROLE_SITE_ADMIN can maintain entities and organizations beyond his own organization.</p>
+</li>
+<li>
+<p>Any entity, regardless of roles, can see all entities from its own organization, though some sensitive information from services is filtered for non-admins.</p>
+</li>
+<li>
+<p>Only a ROLE_SITE_ADMIN can assign ROLE_SITE_ADMIN and ROLE_APPROVE_ORG roles.</p>
+</li>
+<li>
+<p>A ROLE_APPROVE_ORG can create a user for an organization if and only if there is no users for the organization (this is used for creating the first administrative user for an organization).</p>
 </li>
 </ul>
 </div>
 <div class="paragraph">
-<p>In this example we will focus on the first two. Let us assume that the Organization wants to grant members of the internal "E-navigation" department administrative rights in the Maritime Cloud Identity Registry. In DMAs Identity Provider setup the department name is automatically added to the "permissions" attribute. So to make this mapping the current DMA administrator sets up a role mapping between the permission "E-navigation" and the role ROLE_ORG_ADMIN. Once this is done, all members of the DMA E-navigation department will have administrative rights for the DMA organization inside the Identity Registry. As noted earlier, these rights only apply inside the Identity Registry. Other services must create a similar setup with mapping of roles and permissions.</p>
+<p>In this example we will focus on <strong>ROLE_USER</strong> and <strong>ROLE_ORG_ADMIN</strong>. Let us assume that an Organization (DMA) wants to grant members of the internal "E-navigation" department administrative rights in the Maritime Cloud Identity Registry. In DMAs Identity Provider setup the department name is automatically added to the "permissions" attribute. So to make this mapping the current DMA administrator sets up a role mapping between the permission "E-navigation" and the role ROLE_ORG_ADMIN. Once this is done, all members of the DMA E-navigation department will have administrative rights for the DMA organization inside the Identity Registry. As noted earlier, these rights only apply inside the Identity Registry. Other services must create a similar setup with mapping of roles and permissions.</p>
 </div>
 <div style="page-break-after: always;"></div>
 </div>
@@ -1612,7 +1752,7 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-10-27 15:28:40 CEST
+Last updated 2016-12-21 13:39:32 CET
 </div>
 </div>
 <script type="text/x-mathjax-config">
