--- a/identity/index.html
+++ b/identity/index.html
@@ -1100,10 +1100,13 @@ attributes, and credentials.</p>
 <p>In order to use the certificates issued by the Maritime Cloud Identity Registry it is needed to add the Maritime Cloud Root Certificates to the relevant trustchain. Here you can download the root certificates for the Maritime Cloud instances:</p>
 </div>
 <div class="paragraph">
-<p>The Maritime Cloud <strong>Production</strong> environment root certificates in <a href="http://developers.maritimecloud.net/identity/prod-certificate/mc-ca-chain.pem">PEM</a> or <a href="http://developers.maritimecloud.net/identity/prod-certificate/mc-truststore-password-is-changeit.jks">JKS</a> format.</p>
+<p>The Maritime Cloud <strong>Production</strong> environment root certificates as <a href="http://developers.maritimecloud.net/identity/prod-certificate/mc-ca-chain.pem">PEM (one file, primarily for Apache/Nginx)</a>, in <a href="http://developers.maritimecloud.net/identity/prod-certificate/mc-truststore-password-is-changeit.jks">JKS (for Java)</a> or <a href="http://developers.maritimecloud.net/identity/prod-certificate/mc-ca-certs.zip">a zip with the separate files (for windows)</a>.</p>
 </div>
 <div class="paragraph">
-<p>The Maritime Cloud <strong>Test</strong> environment root certificates in <a href="http://developers.maritimecloud.net/identity/test-certificate/mc-ca-chain.pem">PEM</a> or <a href="http://developers.maritimecloud.net/identity/test-certificate/mc-truststore-password-is-changeit.jks">JKS</a> format.</p>
+<p>The Maritime Cloud <strong>Staging</strong> environment root certificates as <a href="http://developers.maritimecloud.net/identity/staging-certificate/mc-ca-chain.pem">PEM (one file, primarily for Apache/Nginx)</a>, in <a href="http://developers.maritimecloud.net/identity/staging-certificate/mc-truststore-password-is-changeit.jks">JKS (for Java)</a> or <a href="http://developers.maritimecloud.net/identity/staging-certificate/mc-ca-certs.zip">a zip with the separate files (for windows)</a>.</p>
+</div>
+<div class="paragraph">
+<p>The Maritime Cloud <strong>Test</strong> environment root certificates as <a href="http://developers.maritimecloud.net/identity/test-certificate/mc-ca-chain.pem">PEM (one file, primarily for Apache/Nginx)</a>, in <a href="http://developers.maritimecloud.net/identity/test-certificate/mc-truststore-password-is-changeit.jks">JKS (for Java)</a> or <a href="http://developers.maritimecloud.net/identity/test-certificate/mc-ca-certs.zip">a zip with the separate files (for windows)</a>.</p>
 </div>
 </div>
 <div class="sect2">
@@ -1734,7 +1737,7 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-01-24 12:47:34 CET
+Last updated 2017-05-10 14:23:12 CEST
 </div>
 </div>
 <script type="text/x-mathjax-config">
